k8s/infra/auth/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth
  labels:
    name: auth
    app: oauth2-proxy
